# Stokes-Mueller-Polarization-Code

./: README.md  pyproject.toml
stokes_mueller/: __init__.py  analysis.py  core.py  materials.py  simulation.py  utilities.py  visualization.py
stokes_mueller/matrices/: numeric.py  symbolic.py
